--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <description>Be usable homework task</description>
     <properties>
         <java.version>20</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
