--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,6 +7,12 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+      - name: Set up JDK 20 for x64
+        uses: actions/setup-java@v3
+        with:
+          java-version: '20'
+          distribution: 'temurin'
+          architecture: x64 q
       - name: Execute tests
         run: mvn verify
-      - run: echo "This job's status is ${{ job.status }}."
+      - run: echo "Run-tests job finished with status ${{ job.status }}."
