--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,8 +10,8 @@ jobs:
       - name: Set up JDK 20 for x64
         uses: actions/setup-java@v3
         with:
-          java-version: '20'
-          distribution: 'temurin'
+          java-version: '21'
+          distribution: 'zulu'
           architecture: x64 q
       - name: Execute tests
         run: mvn verify
