--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,5 +1,5 @@
 name: Run automated tests
-run-name: ${{ github.actor }} is running tests after push
+run-name: Tests are being run after ${{ github.actor }}'s push
 on: [push]
 jobs:
   run-tests:
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-      - name: Set up JDK 20 for x64
+      - name: Set up JDK 21 for x64
         uses: actions/setup-java@v3
         with:
           java-version: '21'
@@ -15,4 +15,4 @@ jobs:
           architecture: x64 q
       - name: Execute tests
         run: mvn verify
-      - run: echo "Run-tests job finished with status ${{ job.status }}."
+      - run: echo "Job finished with status ${{ job.status }}."
